--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "morgan": "^1.10.0",
     "sequelize-cli": "^6.6.0",
+    "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
     "axios": "^1.2.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
